...
 */

enum AccessibilityIdentifier: String {
    case
    
    // MARK: Splash page
    TitleLogo = "Title",
    StartButton = "Start",
    DescriptionText = "Description",
    
    // MARK: Bluetooth page
    LargeText = "large-text",
    MainText = "main-text",
    AllowButton = "allow-button",
    
    // MARK: UI Elements
    Content = "content",
    SubText = "sub-text",
    ButtonText = "button-text"
    
}

