...
                                    <segue destination="7Zi-fn-PC1" kind="embed" id="xa2-AQ-sdG"/>
                                </connections>
                            </containerView>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" image="phone-alerts" translatesAutoresizingMaskIntoConstraints="NO" id="pHD-lC-Lin">
                                <rect key="frame" x="20" y="65" width="280" height="219"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Receive Alerts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="yan-G5-hVS"
                                <rect key="frame" x="20" y="309" width="280" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="zf2-w2-5Cb"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="36"/>
                                <color key="textColor" name="TextColor"/>
...
                                <rect key="frame" x="20" y="503" width="280" height="45"/>
                                <color key="backgroundColor" name="ButtonColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="cSM-7U-80K"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="18"/>
                                <state key="normal" title="Allow Notifications">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
...
